fix header on mobile

--- a/style.css
+++ b/style.css
@@ -268,23 +268,24 @@ p {
   color: var(--orange) !important;
 }
 
-.content3 button{
-    background-color: var(--orange);
-    border: none;
-    color: var(--black);
+.content3 button {
+  background-color: var(--orange);
+  border: none;
+  color: var(--black);
 }
 
 .progress {
   display: none;
 }
 
-footer{
-    scroll-snap-align: start;
+footer {
+  scroll-snap-align: start;
 }
-footer p, h4{
-    margin: 0%;
-    margin-bottom: 1rem;
-   color: var(--white) !important;
+footer p,
+h4 {
+  margin: 0%;
+  margin-bottom: 1rem;
+  color: var(--white) !important;
 }
 
 @media (max-width: 884px) {
@@ -307,6 +308,7 @@ footer p, h4{
   #head {
     display: block;
     z-index: 100;
+    height: 6.5%;
   }
   .menu {
     display: flex;
@@ -314,12 +316,15 @@ footer p, h4{
     justify-content: space-around;
     background-color: var(--black);
     gap: 0rem;
-    padding-block: 0.5rem;
+    padding-block: 1rem;
     justify-content: center;
-}
-.text1, .text2, .text3, .text4 {
+  }
+  .text1,
+  .text2,
+  .text3,
+  .text4 {
     font-size: 0.8rem;
-}
+  }
   .header_image1,
   .header_image2,
   .header_image3,
@@ -348,7 +353,7 @@ footer p, h4{
   }
   .content3 h2 {
     margin: 0%;
-}
+  }
   .box1 a,
   .box2 a,
   .box3 a {
